@@ -14,7 +14,9 @@ import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.LineSegment;
 import org.noise_planet.noisemodelling.pathfinder.profilebuilder.CutPoint;
 import org.noise_planet.noisemodelling.pathfinder.profilebuilder.CutPointReflection;
+import org.noise_planet.noisemodelling.pathfinder.utils.ComplexNumber;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.ArrayList;
 
@@ -22,58 +24,69 @@ import static java.lang.Math.asin;
 import static java.lang.Math.max;
 
 /**
- * Generate a curved profile (favourable propagation conditions) from a coordinate list and two endpoints (source and receiver)
- * Based on:
- * Salomons, E., Van Maercke, D., Defrance, J.,&amp;De Roo, F. (2011). The Harmonoise sound propagation model. Acta acustica united with acustica, 97(1), 62-74.
+ * Generate a curved profile
  * @author Pierre Aumond
+ * @author Martin Glesser
  */
 public class CurvedProfileGenerator {
 
     /**
-     * Eq.2.5.24 and Eq. 2.5.25
-     * @param mn Length of ray
-     * @param d Distance between source and receiver
+     * Compute the length of a sound ray curve in favourable conditions.
+     * Ref: CNOSSOS (Directive 2002/49/EC) Eq.2.5.24 and Eq. 2.5.25
+     *
+     * @param mn Length of ray MN in homogeneous conditions
+     * @param d 3D distance between source and receiver of the unfolded path
      * @return Length of curved ray
      */
     public static double toCurve(double mn, double d){
-        return 2*max(1000, 8*d)* asin(mn/(2*max(1000, 8*d)));
+        double curvatureRadius = max(1000, 8*d);
+        return 2*curvatureRadius * asin(mn/(2*curvatureRadius));
     }
 
     /**
-     * Salomons, E., Van Maercke, D., Defrance, J.,&amp;De Roo, F. (2011). The Harmonoise sound propagation model. Acta acustica united with acustica, 97(1), 62-74.
-     * @param flatProfile
-     * @return
+     * Generate a curved profile (in CNOSSOS favourable propagation conditions) from a cutPoint list.
+     * Ref: A. Kok and A. Van Beek, “Amendments for CNOSSOS-EU,” RIVM, 2019 (Annex G1)
+     *
+     * @param straightProfile List of cutPoints representing the uncurved profile
+     * @return list of CutPoints representing the curved profile
      */
-    public static List<CutPoint> applyTransformation(List<CutPoint> flatProfile, boolean inversed) {
+    public static List<CutPoint> applyTransformation(List<CutPoint> straightProfile) {
         // Get chord endpoints
-        CutPoint sourcePoint = flatProfile.get(0);
-        CutPoint receiverPoint = flatProfile.get(flatProfile.size() - 1);
+        CutPoint sourcePoint = straightProfile.getFirst();
+        CutPoint receiverPoint = straightProfile.getLast();
         Coordinate cs = sourcePoint.getCoordinate();
         Coordinate cr = receiverPoint.getCoordinate();
 
         List<CutPoint> curvedProfile = new ArrayList<>();
-        Coordinate[] curvedCoords = applyTransformation(cs, cr, flatProfile.stream().map(CutPoint::getCoordinate).toArray(Coordinate[]::new), inversed);
-        Coordinate[] groundCoords = applyTransformation(cs, cr, flatProfile.stream().map(p -> new Coordinate(p.getCoordinate().x, p.getCoordinate().y, p.zGround)).toArray(Coordinate[]::new), inversed);
+        List<Coordinate> curvedCoords = applyTransformation(cs, cr,
+                straightProfile.stream()
+                        .map(CutPoint::getCoordinate)
+                        .toList()
+        );
+        List <Coordinate> groundCoords = applyTransformation(cs, cr,
+                straightProfile.stream()
+                        .map(p -> new Coordinate(p.getCoordinate().x, p.getCoordinate().y, p.zGround))
+                        .toList()
+        );
 
-        for (int i = 0; i < curvedCoords.length; i++) {
-            CutPoint cp = flatProfile.get(i);
+        for (int i = 0; i < curvedCoords.size(); i++) {
+            CutPoint cp = straightProfile.get(i);
             CutPoint newCp = cp.clone();
-            newCp.setZGround(groundCoords[i].z);
-            newCp.setCoordinate(curvedCoords[i]);
+            newCp.setZGround(groundCoords.get(i).z);
+            newCp.setCoordinate(curvedCoords.get(i));
 
             // If this is a reflection point, also transform the wall coordinates
-            if (newCp instanceof CutPointReflection) {
-                CutPointReflection reflectionPoint = (CutPointReflection) newCp;
+            if (newCp instanceof CutPointReflection reflectionPoint) {
                 if (reflectionPoint.wall != null) {
                     // Transform wall endpoints using the same curved transformation
-                    Coordinate[] wallCoords = new Coordinate[]{
+                    List<Coordinate> wallCoords = List.of(
                             new Coordinate(reflectionPoint.wall.p0),
                             new Coordinate(reflectionPoint.wall.p1)
-                    };
-                    Coordinate[] transformedWallCoords = applyTransformation(cs, cr, wallCoords, inversed);
+                    );
+                    List<Coordinate> transformedWallCoords = applyTransformation(cs, cr, wallCoords);
 
                     // Create a NEW LineSegment with transformed coordinates
-                    reflectionPoint.wall = new LineSegment(transformedWallCoords[0], transformedWallCoords[1]);
+                    reflectionPoint.wall = new LineSegment(transformedWallCoords.getFirst(), transformedWallCoords.get(1));
                 }
             }
 
@@ -83,15 +96,35 @@ public class CurvedProfileGenerator {
     }
 
     /**
-     * Salomons, E., Van Maercke, D., Defrance, J.,&amp;De Roo, F. (2011). The Harmonoise sound propagation model. Acta acustica united with acustica, 97(1), 62-74.
+     * Generate a curved profile (in CNOSSOS favourable propagation conditions) from a coordinate list and two
+     * endpoints (source and receiver)
+     * Ref: A. Kok and A. Van Beek, “Amendments for CNOSSOS-EU,” RIVM, 2019 (Annex G1)
+     *
      * @param cs Source coordinate
      * @param cr Receiver coordinate
-     * @param flatProfile Array of coordinates representing the flat profile (should be discretized with segments distance &lt; 50 m)
-     * @param inverse If true, apply the inverse transformation (from curved to flat)
-     * @return Array of coordinates representing the curved profile
+     * @param straightProfile List of coordinates representing the flat profile (should be discretized with segments
+     *                        distance &lt; 50 m)
+     * @return List of coordinates representing the curved profile
      */
-    public static Coordinate[] applyTransformation(Coordinate cs, Coordinate cr, Coordinate[] flatProfile, boolean inverse) {
-        Coordinate[] curvedProfile = new Coordinate[flatProfile.length];
+    public static List<Coordinate> applyTransformation(Coordinate cs, Coordinate cr, List<Coordinate> straightProfile) {
+        return applyTransformation(cs, cr, straightProfile, false);
+    }
+
+    /**
+     * Generate a curved profile (in CNOSSOS favourable propagation conditions) from a coordinate list and two
+     * endpoints (source and receiver)
+     * Ref: A. Kok and A. Van Beek, “Amendments for CNOSSOS-EU,” RIVM, 2019 (Annex G1)
+     *
+     * @param cs Source coordinate
+     * @param cr Receiver coordinate
+     * @param straightProfile List of coordinates representing the flat profile (should be discretized with segments
+     *                        distance &lt; 50 m)
+     * @param isInverse If true, apply the inverse transformation (from curved to straight)
+     * @return List of coordinates representing the curved profile
+     */
+     public static List<Coordinate> applyTransformation(Coordinate cs, Coordinate cr,
+                                                        List<Coordinate> straightProfile, boolean isInverse) {
+        List <Coordinate> curvedProfile = Arrays.asList(new Coordinate[straightProfile.size()]);
 
         // Calculate projected distance between source and receiver on the vertical plane
         double d = cs.distance(cr);
@@ -101,25 +134,74 @@ public class CurvedProfileGenerator {
 
         double base = Math.sqrt(radius * radius - d * d / 4);
 
-        for (int i = 0; i < flatProfile.length; i++) {
-            Coordinate p = flatProfile[i];
+        for (int i = 0; i < straightProfile.size(); i++) {
+            Coordinate p = straightProfile.get(i);
 
             // Apply equation (4) for z coordinate transformation
             double z = base -
                     Math.sqrt(radius * radius - Math.pow(p.distance(cs) - d/2, 2));
 
-            if(inverse) {
+            if(isInverse) {
                 z = -z;
                 // it is a simplification because p.distance3D(cs) is not good if we are not on the curved profile
                 // not mathematically exact, but it gives a close working inverse.
             }
 
             // Create new coordinate with transformed z
-            curvedProfile[i] = new Coordinate(p.x, p.y, p.z + z);
+            curvedProfile.set(i, new Coordinate(p.x, p.y, p.z + z));
         }
 
         return curvedProfile;
     }
 
+    /**
+     * Generate a curved profile from a coordinate list, two endpoints (source and receiver) and a curvature radius.
+     * Ref: Salomons, E., Van Maercke, D., Defrance, J.,&amp;De Roo, F. (2011). The Harmonoise sound propagation model.
+     * Acta acustica united with acustica, 97(1), 62-74 (section 2.5)
+     * Note: This implementation yield similar results to the one from applyTransformation. However, it works only on
+     * the whole ground profile (from zGroundSource to zGroundReceiver).
+     *
+     * @param cs Source coordinate
+     * @param cr Receiver coordinate
+     * @param straightProfile2D List of 2D coordinates representing the whole unfolded non-curved profile (from
+     *                        zGround_source to zGround_receiver)
+     * @param radius Radius of curvature
+     * @return List of 2D coordinates representing the unfolded curved profile
+     */
+    public static List<Coordinate> applyHarmonoiseTransformation(
+            Coordinate cs, Coordinate cr, List<Coordinate> straightProfile2D, double radius){
+        // Ground curvature
+        double hSource = cs.z;
+        double hReceiver = cr.z;
+        double hm = (hSource + hReceiver) / 2;
+        double c0 = 2* (hm + radius); // Eq. 77
+        ComplexNumber c = new ComplexNumber(0, c0); // Eq. 76
+        double xc = 0.5 * (straightProfile2D.getFirst().x + straightProfile2D.getLast().x);
+        double yc = 0.5 * (straightProfile2D.getFirst().y + straightProfile2D.getLast().y) + hm;
+        ComplexNumber w0 = new ComplexNumber(xc, yc); // Eq. 75
+
+        double deltaY = 0;
+        List<Coordinate> curvedProfile = Arrays.asList(new Coordinate[straightProfile2D.size()]);
+        for (int i = 0; i < straightProfile2D.size(); i++) {
+            ComplexNumber w = new ComplexNumber(straightProfile2D.get(i).x, straightProfile2D.get(i).y);
+            ComplexNumber wPrim = ComplexNumber.divide(
+                    ComplexNumber.multiply(c, ComplexNumber.subtract(w, w0)),
+                    ComplexNumber.add(c, ComplexNumber.subtract(w, w0))
+            ); // Eq. 74
+
+            // Create new coordinate with transformed z (incl. profile translation)
+            if (i == 0) {
+                deltaY = straightProfile2D.get(i).y - wPrim.getIm();
+                curvedProfile.set(i,
+                        new Coordinate(wPrim.getRe() + xc, straightProfile2D.get(i).y , straightProfile2D.get(i).z));
+            } else {
+                curvedProfile.set(i,
+                        new Coordinate(wPrim.getRe() + xc, wPrim.getIm() + deltaY, straightProfile2D.get(i).z));
+            }
+        }
+
+        // Return
+        return curvedProfile;
+    }
 }
 
